--- a/public/white/scss/black-dashboard/custom/_variables.scss
+++ b/public/white/scss/black-dashboard/custom/_variables.scss
@@ -97,21 +97,21 @@ $default-color-opacity:      rgba(182, 182, 182, .6) !default;
 $orange-color:               #f96332 !default;
 
 $default:       #344675 !default;
-$primary:       #e14eca !default;
+$primary:       #5e72e4 !default;
 $secondary:     #f4f5f7 !default;
 $success:       #00f2c3 !default;
 $info:          #1d8cf8 !default;
 $warning:       #ff8d72 !default;
-$danger:        #fd5d93 !default;
+$danger:        #5e72e4 !default;
 $black:         #222a42 !default;
 
 
 // gradient
 $default-states:       #263148 !default;
-$primary-states:       #ba54f5 !default;
+$primary-states:       #5e72e4 !default;
 $success-states:       #0098f0 !default;
 $info-states:          #3358f4 !default;
-$warning-states:       #ff6491 !default;
+$warning-states:       #5e72e4 !default;
 $danger-states:        #ec250d !default;
 $black-states:         #1d253b !default;
 
@@ -156,7 +156,7 @@ $pinterest:             #cc2127 !default;
 $pinterest-states:      lighten($pinterest, 6%) !default;
 $youtube:               #e52d27 !default;
 $youtube-states:        lighten($youtube, 6%) !default;
-$dribbble:              #ea4c89 !default;
+$dribbble:              #5e72e4 !default;
 $dribbble-states:       lighten($dribbble, 6%) !default;
 $github:                #333333 !default;
 $github-states:         #ccc !default;
